pkg/front_end/testcases/patterns/simple_c_style_pattern_for_in_collections.dart.strong.transformed.expect
library;
import self as self;
import "dart:core" as core;

static method test1(dynamic x) → dynamic
  return block {
    final core::List<core::int> #t1 = core::_GrowableList::•<core::int>(0);
    hoisted core::int i;
    hoisted core::int n;
    {
      final synthesized dynamic #0#0 = x as{TypeError,ForDynamic} core::List<core::int>;
      function ##0#6#initializer() → dynamic
        return (#0#0 as{Unchecked} core::List<dynamic>).{core::List::[]}(0){(core::int) → dynamic};
      late final synthesized dynamic #0#6 = ##0#6#initializer(){() → dynamic};
      function ##0#7#initializer() → dynamic
        return (#0#0 as{Unchecked} core::List<dynamic>).{core::List::[]}(1){(core::int) → dynamic};
      late final synthesized dynamic #0#7 = ##0#7#initializer(){() → dynamic};
      if(!(#0#0 is core::List<dynamic> && #0#0{core::List<dynamic>}.{core::List::length}{core::int} =={core::num::==}{(core::Object) → core::bool} #C1 && (#0#6 is core::int && (let final core::int #t2 = i = #0#6{core::int} in true)) && (#0#7 is core::int && (let final core::int #t3 = n = #0#7{core::int} in true))))
        throw new core::StateError::•("Pattern matching error");
    }
    final core::int #t4 = i;
    final core::int #t5 = n;
    for (core::int i = #t4, core::int n = #t5; i.{core::num::<}(n){(core::num) → core::bool}; i = i.{core::num::+}(1){(core::num) → core::int})
      #t1.{core::List::add}{Invariant}(i){(core::int) → void};
  } =>#t1;
static method test2(dynamic x) → dynamic
  return block {
    final core::Map<core::int, core::int> #t6 = <core::int, core::int>{};
    #t6.{core::Map::[]=}{Invariant}(1.{core::int::unary-}(){() → core::int}, 1.{core::int::unary-}(){() → core::int}){(core::int, core::int) → void};
    hoisted core::int i;
    hoisted core::int n;
    {
      final synthesized dynamic #0#0 = x as{TypeError,ForDynamic} core::List<core::int>;
      function ##0#6#initializer() → dynamic
        return (#0#0 as{Unchecked} core::List<dynamic>).{core::List::[]}(0){(core::int) → dynamic};
      late final synthesized dynamic #0#6 = ##0#6#initializer(){() → dynamic};
      function ##0#7#initializer() → dynamic
        return (#0#0 as{Unchecked} core::List<dynamic>).{core::List::[]}(1){(core::int) → dynamic};
      late final synthesized dynamic #0#7 = ##0#7#initializer(){() → dynamic};
      if(!(#0#0 is core::List<dynamic> && #0#0{core::List<dynamic>}.{core::List::length}{core::int} =={core::num::==}{(core::Object) → core::bool} #C1 && (#0#6 is core::int && (let final core::int #t7 = i = #0#6{core::int} in true)) && (#0#7 is core::int && (let final core::int #t8 = n = #0#7{core::int} in true))))
        throw new core::StateError::•("Pattern matching error");
    }
    final core::int #t9 = i;
    final core::int #t10 = n;
    for (core::int i = #t9, core::int n = #t10; i.{core::num::<}(n){(core::num) → core::bool}; i = i.{core::num::+}(1){(core::num) → core::int})
      #t6.{core::Map::[]=}{Invariant}(i, i){(core::int, core::int) → void};
    #t6.{core::Map::[]=}{Invariant}(2.{core::int::unary-}(){() → core::int}, 2.{core::int::unary-}(){() → core::int}){(core::int, core::int) → void};
  } =>#t6;
static method test3(dynamic x, dynamic another) → dynamic
  return block {
    final core::Map<dynamic, dynamic> #t11 = <dynamic, dynamic>{};
    #t11.{core::Map::[]=}{Invariant}(1.{core::int::unary-}(){() → core::int}, 1.{core::int::unary-}(){() → core::int}){(dynamic, dynamic) → void};
    hoisted core::int i1;
    hoisted dynamic n1;
    {
      final synthesized dynamic #0#0 = x as{TypeError,ForDynamic} core::List<core::int>;
      function ##0#6#initializer() → dynamic
        return (#0#0 as{Unchecked} core::List<dynamic>).{core::List::[]}(0){(core::int) → dynamic};
      late final synthesized dynamic #0#6 = ##0#6#initializer(){() → dynamic};
      if(!(#0#0 is core::List<dynamic> && #0#0{core::List<dynamic>}.{core::List::length}{core::int}.{core::num::>=}(#C1){(core::num) → core::bool} && (#0#6 is core::int && (let final core::int #t12 = i1 = #0#6{core::int} in true)) && (let final dynamic #t13 = n1 = #0#0{core::List<dynamic>}.{core::List::[]}(1){(core::int) → dynamic} in true)))
        throw new core::StateError::•("Pattern matching error");
    }
    final core::int #t14 = i1;
    final dynamic #t15 = n1;
    for (core::int i1 = #t14, dynamic n1 = #t15; i1.{core::num::<}(n1 as{TypeError,ForDynamic} core::num){(core::num) → core::bool}; i1 = i1.{core::num::+}(1){(core::num) → core::int}) {
      hoisted core::int i2;
      hoisted dynamic n2;
      {
        final synthesized dynamic #1#0 = x as{TypeError,ForDynamic} core::List<core::int>;
        function ##1#8#initializer() → dynamic
          return (#1#0 as{Unchecked} core::List<dynamic>).{core::List::[]}(2){(core::int) → dynamic};
        late final synthesized dynamic #1#8 = ##1#8#initializer(){() → dynamic};
        if(!(#1#0 is core::List<dynamic> && #1#0{core::List<dynamic>}.{core::List::length}{core::int}.{core::num::>=}(#C2){(core::num) → core::bool} && (#1#8 is core::int && (let final core::int #t16 = i2 = #1#8{core::int} in true)) && (let final dynamic #t17 = n2 = #1#0{core::List<dynamic>}.{core::List::[]}(3){(core::int) → dynamic} in true)))
          throw new core::StateError::•("Pattern matching error");
      }
      final core::int #t18 = i2;
      final dynamic #t19 = n2;
      for (core::int i2 = #t18, dynamic n2 = #t19; i2.{core::num::<}(n2 as{TypeError,ForDynamic} core::num){(core::num) → core::bool}; i2 = i2.{core::num::+}(1){(core::num) → core::int})
        #t11.{core::Map::addAll}{Invariant}(another as{TypeError,ForDynamic} core::Map<dynamic, dynamic>){(core::Map<dynamic, dynamic>) → void};
    }
    #t11.{core::Map::[]=}{Invariant}(2.{core::int::unary-}(){() → core::int}, 2.{core::int::unary-}(){() → core::int}){(dynamic, dynamic) → void};
  } =>#t11;
static method main() → dynamic {
  self::expectEquals(self::listToString(self::test1(core::_GrowableList::_literal2<core::int>(0, 3)) as{TypeError,ForDynamic} core::List<dynamic>), self::listToString(core::_GrowableList::_literal3<dynamic>(0, 1, 2)));
  self::expectEquals(self::listToString(self::test1(core::_GrowableList::_literal2<core::int>(0, 0)) as{TypeError,ForDynamic} core::List<dynamic>), self::listToString(core::_GrowableList::•<dynamic>(0)));
  self::expectThrows(() → void => self::test1(<dynamic, dynamic>{}));
  self::expectEquals(self::mapToString(self::test2(core::_GrowableList::_literal2<core::int>(0, 3)) as{TypeError,ForDynamic} core::Map<dynamic, dynamic>), self::mapToString(<dynamic, dynamic>{2.{core::int::unary-}(){() → core::int}: 2.{core::int::unary-}(){() → core::int}, 1.{core::int::unary-}(){() → core::int}: 1.{core::int::unary-}(){() → core::int}, 0: 0, 1: 1, 2: 2}));
  self::expectEquals(self::mapToString(self::test2(core::_GrowableList::_literal2<core::int>(0, 0)) as{TypeError,ForDynamic} core::Map<dynamic, dynamic>), self::mapToString(<dynamic, dynamic>{2.{core::int::unary-}(){() → core::int}: 2.{core::int::unary-}(){() → core::int}, 1.{core::int::unary-}(){() → core::int}: 1.{core::int::unary-}(){() → core::int}}));
  self::expectThrows(() → void => self::test1(core::_GrowableList::•<dynamic>(0)));
  self::expectEquals(self::mapToString(self::test3(core::_GrowableList::_literal4<core::int>(0, 0, 0, 0), <core::int, core::int>{0: 0}) as{TypeError,ForDynamic} core::Map<dynamic, dynamic>), self::mapToString(<dynamic, dynamic>{1.{core::int::unary-}(){() → core::int}: 1.{core::int::unary-}(){() → core::int}, 2.{core::int::unary-}(){() → core::int}: 2.{core::int::unary-}(){() → core::int}}));
  self::expectEquals(self::mapToString(self::test3(core::_GrowableList::_literal4<core::int>(0, 1, 0, 1), <core::int, core::int>{0: 0}) as{TypeError,ForDynamic} core::Map<dynamic, dynamic>), self::mapToString(<dynamic, dynamic>{1.{core::int::unary-}(){() → core::int}: 1.{core::int::unary-}(){() → core::int}, 2.{core::int::unary-}(){() → core::int}: 2.{core::int::unary-}(){() → core::int}, 0: 0}));
  self::expectThrows(() → void => self::test3(core::_GrowableList::•<dynamic>(0), <dynamic, dynamic>{}));
}
static method expectEquals(dynamic x, dynamic y) → dynamic {
  if(!(x =={core::Object::==}{(core::Object) → core::bool} y)) {
    throw "Expected '${x}' to be equal to '${y}'.";
  }
}
static method listToString(core::List<dynamic> list) → dynamic
  return "[${list.{core::Iterable::map}<core::String>((dynamic e) → core::String => "${e}"){((dynamic) → core::String) → core::Iterable<core::String>}.{core::Iterable::join}(","){([core::String]) → core::String}}]";
static method expectThrows(() → void f) → dynamic {
  core::bool hasThrown = true;
  try {
    f(){() → void};
    hasThrown = false;
  }
  on core::Object catch(final core::Object e) {
  }
  if(!hasThrown) {
    throw "Expected the function to throw.";
  }
}
static method mapToString(core::Map<dynamic, dynamic> map) → dynamic {
  core::List<core::String> entryStrings = block {
    final core::List<core::String> #t20 = core::_GrowableList::•<core::String>(0);
    {
      synthesized core::Iterator<core::MapEntry<dynamic, dynamic>> :sync-for-iterator = map.{core::Map::entries}{core::Iterable<core::MapEntry<dynamic, dynamic>>}.{core::Iterable::iterator}{core::Iterator<core::MapEntry<dynamic, dynamic>>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        core::MapEntry<dynamic, dynamic> entry = :sync-for-iterator.{core::Iterator::current}{core::MapEntry<dynamic, dynamic>};
        #t20.{core::List::add}{Invariant}("${entry.{core::MapEntry::key}{dynamic}}:${entry.{core::MapEntry::value}{dynamic}}"){(core::String) → void};
      }
    }
  } =>#t20;
  entryStrings.{core::List::sort}(){([(core::String, core::String) →? core::int]) → void};
  return "[${entryStrings.{core::Iterable::join}(","){([core::String]) → core::String}}]";
}

constants  {
  #C1 = 2
  #C2 = 4
}

Extra constant evaluation status:
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:8:3 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:8:7 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:10:3 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:10:7 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:14:3 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:14:7 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:18:3 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:18:7 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:34:18 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:34:22 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:34:26 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:34:30 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:38:18 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:38:22 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:38:26 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:38:30 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:44:18 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:44:22 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:44:26 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:44:30 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:48:18 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:48:22 -> IntConstant(-1)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:48:26 -> IntConstant(-2)
Evaluated: InstanceInvocation @ org-dartlang-testcase:///simple_c_style_pattern_for_in_collections.dart:48:30 -> IntConstant(-2)
Extra constant evaluation: evaluated: 314, effectively constant: 24
